--- a/index.html
+++ b/index.html
@@ -8,34 +8,34 @@
     <title>farsilingo</title>
 </head>
 <body>
-    <div class="topnav">
+    <!-- <div class="topnav">
         <a href="#">Link</a>
         <a href="#">Link</a>
         <a href="#">Link</a>
-    </div>
+    </div> -->
     <div class="header">
         <h1></h1>
     </div>
     <div class="row">
         <div class="column">
             <h2>Learn Lingo</h2>
-            <p>learn slangs, sayings and cultural concepts.
+            <p>Learn slangs, sayings and cultural concepts.
             </p>
         </div>
 
         <div class="column">
             <h2>Send Script</h2>
-            <p>Send me your scripts to translate to and from Farsi to English</p>
+            <p>Send me your scripts to translate to and from Farsi to English.</p>
         </div>
         
         <div class="column">
             <h2>About Me</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+            <p> I am a native Farsi/English speaker, a software engineer, an artist and a color enthusiast. </p>
         </div>
     </div>
 
     <div class="footer">
-        <p>Footer</p>
+        <!-- <p>Footer</p> -->
     </div>
 
 </body>
