--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
         <a href="#">Link</a>
     </div> -->
     <div class="header">
+        <img src="./assets/FarsiLingo.png" alt="">
         <h1></h1>
     </div>
     <div class="row">
         <div class="column">
-        <a href="./index2.html">
+        <a target = "_blank" href="./index2.html">
             <h2>Learn Lingo</h2>
         </a>
             <p>Learn slangs, sayings and cultural concepts.
@@ -26,14 +27,14 @@
         </div>
 
         <div class="column">
-        <a href="./index3.html">
+        <a target = "_blank" href="./index3.html">
             <h2>Send Script</h2>
         </a>
             <p>Send me your scripts to translate to and from Farsi to English.</p>
         </div>
         
         <div class="column">
-        <a href="./index4.html">
+        <a target = "_blank" href="./index4.html">
             <h2>About Me</h2>
         </a>
             <p> I am a native Farsi/English speaker, a software engineer, an artist and a color enthusiast. </p>
