--- a/index2.html
+++ b/index2.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
+    <script src="style.js"></script>
     <title>LearnLingo</title>
 </head>
 <body>
+   <h2 class="learn">I want to learn
+       <select name="lingo" id="lingo">
+           <option value="0">SELECT</option>
+           <option value="1">Greetings</option>
+           <option value="2">Terms of endearment</option>
+           <option value="3">Random</option>
+           <option value="4">Culture</option>
+       </select>
+</h2>
     
 </body>
 </html>
