--- a/index2.html
+++ b/index2.html
@@ -11,12 +11,13 @@
    <h2 class="learn">I want to learn
        <select name="lingo" id="lingo">
            <option value="0">SELECT</option>
-           <option value="1">Greetings</option>
+           <option value="1"><a href="#greetings">Greetings</a></option>
            <option value="2">Terms of endearment</option>
            <option value="3">Random</option>
            <option value="4">Culture</option>
        </select>
 </h2>
+<p id="greetings"><a href="greetings">You chose greetings!</a></p>
     
 </body>
 </html>
