added the form to scrip

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="#">Link</a>
     </div> -->
     <div class="header">
-        <img src="./assets/FarsiLingo.png" alt="">
+        <img src="./assets/FarsiLingo.png" alt="FarsiLingo logo">
         <h1></h1>
     </div>
     <div class="row">
@@ -27,7 +27,7 @@
         </div>
 
         <div class="column">
-        <a target = "_blank" href="./index3.html">
+        <a target = "_blank" href="./script.html">
             <h2>Send Script</h2>
         </a>
             <p>Send me your scripts to translate to and from Farsi to English.</p>
