flipping card props

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <a href="#">Link</a>
     </div> -->
     <div class="header">
-        <img src="./assets/FarsiLingo.png" alt="FarsiLingo logo">
+        <img src="./assets/FarsiLingo_Logo.png" alt="FarsiLingo logo">
         <h1></h1>
     </div>
     <div class="row">
         <div class="column">
-        <a target = "_blank" href="./index2.html">
+        <a target = "_blank" href="./learnlingo.html">
             <h2>Learn Lingo</h2>
         </a>
             <p>Learn slangs, sayings and cultural concepts.
