--- a/learnlingo.html
+++ b/learnlingo.html
@@ -7,7 +7,15 @@
     <title>LearnLingo</title>
 </head>
 <body>
+<div class="flip-card">
+    <div class="flip-card-inner">
+        <div class="flip-card-front">
 
+        </div>
+
+    </div>
+
+</div>
 <script src="style.js"></script>
     
 </body>
