--- a/learnlingo.html
+++ b/learnlingo.html
@@ -10,11 +10,14 @@
 <div class="flip-card">
     <div class="flip-card-inner">
         <div class="flip-card-front">
-
+            <img src="./assets/shomal.jpeg" alt="shomal"
+            style="width:300px; height:300px;">
         </div>
-
+        <div class="flip-card-back">
+            <h1>Shomal</h1>
+            <p>North of Iran</p>
+        </div>
     </div>
-
 </div>
 <script src="style.js"></script>
     
