--- a/learnlingo.html
+++ b/learnlingo.html
@@ -10,16 +10,19 @@
 <div class="flip-card">
     <div class="flip-card-inner">
         <div class="flip-card-front">
-            <img src="./assets/shomal.jpeg" alt="shomal"
-            style="width:300px; height:300px;">
+            <h2>WATER</h2>
+            <!-- <img src="./assets/aub.png" alt="water" -->
+            <!-- style="width:300px; height:300px;"> -->
         </div>
         <div class="flip-card-back">
-            <h1>Shomal</h1>
-            <p>North of Iran</p>
+            <h2>آب</h2>
+            <!-- <img src="./assets/water.png" alt="" -->
+            <!-- style="width:300px; height:300px;"> -->
+            <p></p>
         </div>
     </div>
 </div>
 <script src="style.js"></script>
-    
+<script src="./scripts.js"></script>
 </body>
 </html>
