removed blank targets

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="row">
         <div class="column">
-        <a target = "_blank" href="./learnlingo.html">
+        <a href="./learnlingo.html">
             <h2>Learn Lingo</h2>
         </a>
             <p>Learn slangs, sayings and cultural concepts.
@@ -27,14 +27,14 @@
         </div>
 
         <div class="column">
-        <a target = "_blank" href="./script.html">
+        <a href="./script.html">
             <h2>Send Script</h2>
         </a>
             <p>Send me your scripts to translate to and from Farsi to English.</p>
         </div>
         
         <div class="column">
-        <a target = "_blank" href="./index4.html">
+        <a href="./index4.html">
             <h2>About Me</h2>
         </a>
             <p> I am a native Farsi/English speaker, a software engineer, an artist and a color enthusiast. </p>
