linked nikadarab.com

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
         </a>
             <p>Send me your scripts to translate to and from Farsi to English.</p>
         </div>
-        
-        <div class="column">
-        <a href="./index4.html">
+        <div class="about-me">
+            <div class="column">
+                <a href="https://www.nikadarab.com">
             <h2>About Me</h2>
-        </a>
-            <p> I am a native Farsi/English speaker, a software engineer, an artist and a color enthusiast. </p>
+                </a>
+            <p> I am a native Farsi/English speaker, a software engineer and an artist. </p>
+            </div>
         </div>
-    </div>
-
+        </div>
     <div class="footer">
         <!-- <p>Footer</p> -->
     </div>
