--- a/index.html
+++ b/index.html
@@ -8,13 +8,9 @@
     <title>farsilingo</title>
 </head>
 <body>
-    <!-- <div class="topnav">
-        <a href="#">Link</a>
-        <a href="#">Link</a>
-        <a href="#">Link</a>
-    </div> -->
+
     <div class="header">
-        <img src="./assets/FarsiLingo_Logo.png" alt="FarsiLingo logo">
+        <!-- <img src="./assets/FarsiLingo_Logo.png" alt="FarsiLingo logo"> -->
         <h1></h1>
     </div>
     <div class="row">
@@ -32,18 +28,12 @@
         </a>
             <p>Send me your scripts to translate to and from Farsi to English.</p>
         </div>
-        <div class="about-me">
-            <div class="column">
-                <a href="https://www.nikadarab.com">
-            <h2>About Me</h2>
-                </a>
-            <p> I am a native Farsi/English speaker, a software engineer and an artist. </p>
-            </div>
-        </div>
-        </div>
+        
     <div class="footer">
         <!-- <p>Footer</p> -->
     </div>
 
 </body>
 </html>
+
+ 
