--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="./learnlingo.html">
             <h2>Learn Lingo</h2>
         </a>
-            <p>Learn slangs, sayings and cultural concepts.
+            <!-- <p>Learn slangs, sayings and cultural concepts. -->
             </p>
         </div>
 
@@ -26,7 +26,7 @@
         <a href="./script.html">
             <h2>Send Script</h2>
         </a>
-            <p>Send me your scripts to translate to and from Farsi to English.</p>
+            <!-- <p>Send me your scripts to translate to and from Farsi to English.</p> -->
         </div>
         
     <div class="footer">
