--- a/script.html
+++ b/script.html
@@ -13,7 +13,7 @@
         <h1></h1>
     </div>
     <div class="form-container">
-        <form action="" method="post" >
+        <form action="" method="post"  netlify>
             <label for="name">
                 Name:
                 <br/>
