--- a/script.html
+++ b/script.html
@@ -17,7 +17,7 @@
             <label for="name">
                 Name:
                 <br/>
-                <input class= "form-field" type="text" name="name" id="name">
+                <input class= "" type="name" name="name" id="name">
             </label>
             <br/>
             <label for="email">
