--- a/script.html
+++ b/script.html
@@ -13,7 +13,7 @@
         <h1></h1>
     </div>
     <div class="form-container">
-        <form action="" method="post"  netlify>
+        <form action="" method="post" id="Scripts" netlify>
             <label for="name">
                 Name:
                 <br/>
@@ -26,6 +26,7 @@
                 <input class = "form-field" type="email" name="email" id="email">
             </label>
             <br/>
+            <label for="scripts"></label>
                 Script:
             <label for="script">
                 <textarea class ="form-field" type="text" name="script" id="script" rowsco="8">
