--- a/script.html
+++ b/script.html
@@ -13,7 +13,7 @@
         <h1></h1>
     </div>
     <div class="form-container">
-        <form action="" method="post" id="Scripts" netlify>
+        <form action="" method="post" id="translate" netlify>
             <label for="name">
                 Name:
                 <br/>
@@ -26,10 +26,9 @@
                 <input class = "form-field" type="email" name="email" id="email">
             </label>
             <br/>
-            <label for="scripts"></label>
-                Script:
             <label for="script">
-                <textarea class ="form-field" type="text" name="script" id="script" rowsco="8">
+                Script:
+                <textarea class ="form-field" type="script" name="script" id="script" rowsco="8">
                 </textarea>   
             </label>
             <br/>
