changed the form

--- a/script.html
+++ b/script.html
@@ -9,7 +9,7 @@
     </head>
 <body>
     <div class="header">
-        <img src="./assets/FarsiLingo_Logo.png" alt="FarsiLingo logo">
+        <!-- <img src="./assets/FarsiLingo_Logo.png" alt="FarsiLingo logo"> -->
         <h1></h1>
     </div>
     <div class="form-container">
@@ -17,7 +17,7 @@
             <label for="name">
                 Name:
                 <br/>
-                <input class= "" type="name" name="name" id="name">
+                <input class= "form-field" type="name" name="name" id="name">
             </label>
             <br/>
             <label for="email">
